ops/k8s/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: NodePort
  ports:
  - port: 7070
    targetPort: 7071
  selector:
    app: nginx
